fix init tables accrual
