# internal/server/accrual/handlers_tests.go
@@ -1,25 +1,26 @@
 package serveraccrual
 
-import (
-	"testing"
-)
+// func TestWebhook(t *testing.T) {
+// 	// создадим конроллер моков и экземпляр мок-хранилища
+// 	ctrl := gomock.NewController(t)
+// 	s := mocks.NewMockStorageAccrualSystem(ctrl)
 
-func TestWebhook(t *testing.T) {
-	// // создадим конроллер моков и экземпляр мок-хранилища
-	// ctrl := gomock.NewController(t)
-	// s := mocks.NewMockStorageAccrualSystem(ctrl)
+// 	// определим, какой результат будем получать от «хранилища»
+// 	messages := []storageaccrual.Order{
+// 		{
+// 			Order:      "Bork",
+// 			Goods:     []storageaccrual.Good{
+// 				storageaccrual.Good{
+// 					Description: "one",
+// 					Price: 100,
+// 				},
+// 			},
+// 		},
 
-	// // определим, какой результат будем получать от «хранилища»
-	// messages := []storageaccrual.Reward{
-	// 	{
-	// 		Match:      "Bork",
-	// 		Reward:     10,
-	// 		RewartType: storageaccrual.RewardTypePercent,
-	// 	},
-	// }
+// 	}
 
-	// for _, tc := range testCases {
-	// 	t.Run(tc.method, func(t *testing.T) {
-	// 	})
-	// }
-}
+// 	for _, tc := range testCases {
+// 		t.Run(tc.method, func(t *testing.T) {
+// 		})
+// 	}
+// }
